--- a/bella-style.css
+++ b/bella-style.css
@@ -425,7 +425,7 @@ color: #333;
     max-width: 100%;
     padding: 3rem 0 1rem ;
     margin-top: 5rem;
-    justify-content: space-ar;
+    justify-content: space-around;
 }
 
 .footer-content{
