100 killer website uploaded

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav {
 }
 
 .username {
-  background: linear-gradient(to right, #00aaff, #4dc9ff);
+  background: linear-gradient(to right, #0000ff, #4dc9ff);
   border: none;
   padding: 0.6vw 1.2vw;
   border-radius: 20px;
