--- a/The Killler Website/resources/css/style.css
+++ b/The Killler Website/resources/css/style.css
@@ -21,6 +21,7 @@ header{
      background-color: white;
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('img/header food.jpg');
     color: #555;
+    background-attachment: fixed;
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -51,7 +52,7 @@ h1{
     
 }
 
-.btn:link, .btn:visited{
+.btn:link, .btn:visited,input[type=submit]{
     display: inline-block;
     padding: 10px 30px;
     text-decoration: none;
@@ -60,7 +61,7 @@ h1{
     
 }
 
-.btn-full.btn:link, .btn-full{
+.btn-full.btn:link, .btn-full,input[type=submit]{
     background-color: #e67e22;
     color: #fff;
     border: 1px solid #e67e22;
@@ -73,7 +74,7 @@ h1{
     color: #fff;
 }   
 
-.btn:hover, .btn:active{
+.btn:hover, .btn:active,input[type=submit]{
     background-color: #bf6114;
     font-weight: 500;
 }
@@ -83,7 +84,7 @@ h1{
     color: #fff;
 }
 
-.btn-full:hover, .btn-full:active{
+.btn-full:hover, .btn-full:active,input[type=submit]{
     border: 2px solid #fff;
     color: #fff;
 }
@@ -121,12 +122,15 @@ h1{
 .main-nav li a:active{
     border-bottom: 2px solid #e67e22;
 }
+
 section {
-    padding: 5rem 0;
+    padding: 2rem 0;
     margin: 3.125rem auto;
 }
 
 .row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
     max-width: 1140px;
     margin: 0 auto;
     padding: 0 1rem;
@@ -189,7 +193,6 @@ h2 {
   padding: 40px 0;
 }
 
-
 .meals-showcase {
   list-style: none;
   display: grid;
@@ -201,18 +204,15 @@ h2 {
   max-width: 1200px;
 }
 
-*/
 .meals-showcase li {
   overflow: hidden;
   border-radius: 8px;
 }
 
-
 .meal-photo {
   width: 100%;
   height: 100%;
 }
-
 
 .meal-photo img {
   width: 100%;
@@ -223,7 +223,6 @@ h2 {
     transition: transform 0.3s ease;
 }
 
-
 .meal-photo img:hover {
   transform: scale(1.0);
   opacity: 0.9;
@@ -233,6 +232,7 @@ h2 {
 }
 
 .section-steps {
+  height: 100%;
   padding: 5vw 2vw;
   text-align: center;
   max-width: 100%;
@@ -247,7 +247,6 @@ h2 {
   margin-bottom: 3vw;
 }
 
-
 .row-steps {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -256,21 +255,21 @@ h2 {
   text-align: left;
 }
 
-
 .mob-img {
-  width: 70%;
+  width: 45%;
+  height: 70vh;
   max-width: 350px;
   display: block;
   margin: 0 auto;
+
   border-radius: 30px;
-  box-shadow: 0 0.8vw 2vw rgba(0,0,0,0.15);
+  box-shadow: 3px 3px 0.8vw 2vw rgba(0,0,0,0.15);
   transition: transform 0.3s ease;
 }
 
 .mob-img:hover {
   transform: scale(1.03);
 }
-
 
 .works-step {
   display: flex;
@@ -288,7 +287,6 @@ h2 {
   font-size: clamp(1.2rem, 2vw, 1.5rem);
   margin: 0;
 }
-
 
 .store-pic {
   display: flex;
@@ -309,7 +307,6 @@ h2 {
   transform: scale(1.05);
 }
 
-
 .download-pic {
   margin-top: 2vw;
 }
@@ -320,6 +317,318 @@ h2 {
   margin: 0 auto;
   float: left;
 }
+
+.section-cities{
+  width: 100%;
+  height: fit-content;
+  background-color: rgb(217, 232, 236);
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+  margin: 0;
+  overflow: hidden;
+
+}
+
+.row-city h2{
+  border-bottom: 5px solid #bf6114;
+  border-radius: 50px;
+}
+
+.row-cities{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px ,1fr));
+  gap: 10px;   
+  width: 100%;
+  height: auto;
+
+}
+
+.row-cities img{
+  width: repeat(auto-fit, minmax(20%, 1fr));
+  margin: 10px;
+  height: 150px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px 5px #777575;
+}
+
+.row-cities img:hover{
+  transform: scale(1.2);
+}
+
+.icon-small{
+  color: #e67e22;
+  font-size: 52%;
+}
+
+.city-features{
+  font-size: 80% ;
+  position: relative;
+  left: 20px;
+
+}
+
+.section-customer{
+
+  width: 100%;
+  height: fit-content;
+  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../img/food2.jpeg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+  margin: 0%;
+  overflow: hidden;
+  color: whitesmoke;
+  position: relative;
+  
+
+}
+
+
+.row-cust{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px ,1fr));   
+  width: 100%;
+  height: auto;
+
+}
+
+
+
+blockquote::before{
+ content: '\201C' ;
+ font-size:300% ;
+ display: block;
+ position:absolute; 
+ top:45vh
+ 
+}
+
+blockquote{
+  margin-top: 25px;
+}
+
+blockquote cite{
+  position: block;
+  margin-top: 25px;
+}
+
+
+
+blockquote cite img{
+width: 50px;
+height: 45px;
+border-radius: 100%;
+position: relative;
+vertical-align: middle;
+margin: 15px;
+
+}
+
+.section-plans{
+  background-color: rgb(236, 229, 201);
+  margin: 0%;
+  width: 100%;
+  height: auto 100%;
+  position: relative;
+
+}
+
+/* .section-plans ul{
+  list-style: none;
+} */
+
+.plan-box{
+  background-color: #beb8b8;
+  max-width:65%;
+  border-radius: 5px;
+  justify-content: space-between;
+  margin-left: 15%;
+  list-style: none;
+  font-weight: 400;
+}
+
+
+.span-1-of-3{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  justify-content: center;
+  min-width:150px ;
+
+
+}
+
+.ulli li{
+  list-style: none;
+  font-size: 80%;
+  font-weight: 200%;
+}
+
+.plan-box h3{
+font-size: 172%;
+border-bottom: 2px solid white;
+color: #eb5f13;
+text-shadow: 4px 4px 4px #fafaf9;
+font-weight: 800;
+
+}
+
+.plan-box span{
+  font-size: 40px;
+  color: #f3821f;
+}
+
+.plan-box p{
+  font-weight: 400%;
+}
+
+.plan-box div:last-child{
+  text-align: center;
+  
+}
+
+
+
+.plan-box div{
+  padding: 15px;
+  /* border-bottom: 1px solid #e8e8e8; */
+}
+
+.textria{
+  height: 130px;
+}
+
+.section-form{
+background-color: #ece6ec;
+margin-top: 0%;
+margin-bottom: 0%;
+}
+
+.contact-form{
+  width: 80%;
+  margin: 0 auto;
+  max-height: 500px;
+  justify-content: space-between;
+  border: 2px solid #beb8b8;
+  box-shadow:5px 5px 5px 5px #beb8b8;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea{
+  width: 100%;
+  padding: 0px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
+textarea{
+  height: 50%;
+}
+
+input[type=checkbox]{
+  margin: 10px 5px 10px 0;
+}
+
+.contact-form div:last-child{
+  padding-left: 0%;
+
+}
+
+footer{
+  margin: 0%;
+  background-color: #333;
+  font-size: 80%;
+  padding: 50px;
+}
+
+.footer-navi{
+  list-style: none;
+  float: left;
+}
+
+.social-links{
+  list-style: none;
+  float:right;
+}
+
+.footer-navi li,
+.social-links li{
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer-navi li a:link,
+.footer-navi li a:visited,
+.social-links li a:link,
+.social-links li a:visited{
+  text-decoration: none;
+  border:0;
+  color: #888;
+}
+
+.rowfoot{
+  display: flex;
+  justify-content: space-between;
+}
+
+.col-social ul{
+  list-style: none;
+  display: flex;
+  width: 20vw;
+  justify-content: space-between;
+  font-size: 150%;
+  color: #888;
+
+}
+
+.col-links ul{
+   list-style: none;
+  display: flex;
+  width: 30vw;
+  justify-content: space-between;
+  font-size: 100%;
+  color: #888;
+}
+
+.rowfooter{
+  text-align: center;
+  color: #888;
+  font-size:110%;
+  margin-top: 30px;
+  margin-bottom: 0%;
+  font-weight: 400;
+}
+
+.col-links ul li a:hover,
+.col-social ul li:hover{
+  color: white;
+  font-weight: 400;
+}
+
+.fb:hover{
+  color: #3b5998;
+}
+.twitter:hover{
+  color:#00aced;
+}
+.insta:hover{
+  color: #517fa4;
+}
+.google:hover{
+  color: #dd4b39;
+}
+
+input[type=submit]{
+  padding: 10px;
+}
+
+
+
+
 
 
 
